# baby_keyboard

./: .cursorrules  .gitignore  BabyKeyboardLock-Info.plist  Gemfile  LICENSE  MEMORY_LEAK_FIXES.md  MOCKING_EVENT_TAP.md  Makefile  REFACTORING_SUMMARY.md  baby-keyboard-Info.plist  baby-keyboardTests-Info.plist  pyproject.toml  readEnglishStr.rb  readme.md
.github/: dependabot.yml
BabyKeyboardLock/: BabyKeyboardLockApp.swift  BabyKeyboardLockRelease.entitlements  ContentView.swift  EventEffectHandler.swift  EventHandler.swift  Firework.swift  LaunchAtStartup.swift  Localizable.xcstrings  LockEffect.swift  SoundManager.swift  TypingGameState.swift  authorization.swift
BabyKeyboardLock.xcodeproj/: project.pbxproj
BabyKeyboardLockTests/: BabyKeyboardLockAppTests.swift  BabyKeyboardLockTests.swift  EventHandlerUnitTests.swift  TestEnvironmentDetectionTests.swift
BabyKeyboardLockUITests/: BabyKeyboardLockUITests.swift  BabyKeyboardLockUITestsLaunchTests.swift
archive/: Makefile.legacy
baby_keyboard/: BabyKeyboardLockApp.swift  ContentView.swift  EventEffectHandler.swift  EventHandler.swift  Firework.swift  KeyCodeString.swift  LetterView.swift  SoundManager.swift  authorization.swift  baby_keyboardApp.swift
baby_keyboard.xcodeproj/: project.pbxproj
baby_keyboardTests/: baby_keyboardTests.swift
baby_keyboardUITests/: baby_keyboardUITests.swift  baby_keyboardUITestsLaunchTests.swift
de/: Localizable.xcstrings
dev/: custom-word-set.md  todo.md  visual_effects_ideas.md
dev/notes/: done.md  (+2 more)
fastlane/: Fastfile  README.md
fi/: Localizable.xcstrings
fr/: Localizable.xcstrings
it/: Localizable.xcstrings
nl/: Localizable.xcstrings
scripts/: __init__.py  archive.sh  clean.sh  download_open_images_fiftyone.py  download_openimages.py  download_quickdraw.py  export.sh  fix-signature.sh  generate_images.py  generate_with_nano_banana.py  install.sh  list_words.py  test_image_generation.sh  word_utils.py
(+56 files in other folders)
